<resources>
    <string name="app_name">TrainMe</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <!--    <string name="action_sign_in">Sign in or register</string>-->
    <!--    <string name="action_sign_in_short">Sign in</string>-->
    <string name="action_log_in">Log in using your account</string>
    <string name="action_log_in_short">Log in</string>
    <string name="login_welcome">Work harder every day!\nTrainMe</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="gender_array">
        <item>male</item>
        <item>female</item>
        <item>other</item>
    </string-array>
    <!-- Strings related to Bottom Navigation -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_myroutines">MyRoutines</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_favs">Favorites</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_training">Training</string>
    <string name="title_activity_detail_routine">DetailRoutine</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Detail</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start_training">Start training!</string>
    <string name="cycles">Cycles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_play_routine">PlayRoutine</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="loading">"Loading..."</string>
    <string name="error">"Error"</string>
    <string name="success">Success</string>
    <string name="NoBdate">No birthdate Provided</string>
    <string name="menu_item_category">Category</string>
    <string name="menu_item_score">Score</string>
    <string name="menu_item_date">Date</string>
    <string name="menu_item_difficulty">Difficulty</string>
    <string name="menu_item_name">Name</string>
    <string name="logoutQuestion">Leaving so soon? Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="word_username">Username</string>
    <string name="duration">Duration: </string>
    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite</string>
    <string name="ejercicios">Exercises of cycle</string>
    <string name="toggleExerciseView">Toggle exercise view</string>
    <string name="goNextCycle">Let\'s go!</string>
    <string name="finishCyclePopUp">"Congratulations! You finished"</string>
    <string name="keepGoing">Keep going!</string>
    <string name="finishRoutine">Amazing! You finished the routine!</string>
    <string name="rememberToReview">Don\'t forget to review the routine.</string>
    <string name="goBackToDetail">Go back to routine detail</string>
    <string name="cyclesLeft">%1$d cycle finished out of %2$d</string>
    <string name="barra" translatable="false">%1$d/%2$d</string>
    <string name="quitRoutineQuestion">Are you sure you want to stop the routine?</string>
    <string name="progressLost">All progress will be lost!</string>
    <string name="confirmChanges">Confirm Changes?</string>
    <string name="save_changes">Save Changes</string>
    <string name="phone_number">Phone Number</string>
    <string name="link_to_profile_pic">Link to Profile Pic</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="noCycles">Routine has no cycles</string>
    <string name="noExercises">%1$s has no exercises</string>
    <string name="noExercisesMsg">Sorry, you need exercises on your cycle.</string>
    <string name="userPreferences">User Preferences</string>
    <string name="logout">Logout</string>
    <string name="darkMode">Dark Mode</string>
    <string name="setPlayRoutineMode">Default view for exercises when training</string>
    <string name="detailViewDescrip">Show one exercise in detail</string>
    <string name="active">Active</string>
    <string name="notActive">Not activated</string>
    <string name="multipleExercisesViewDescrip">Show previous, current and next exercise</string>
    <string name="viewMode">Set view mode</string>
    <string name="defaultSection">defaultSection</string>
    <string name="setDefaultSection">- Select default navigation section</string>
    <string name="currentOrder">Now ordered by %1$s</string>
    <string name="orderBy">Select order</string>
    <string name="rate">Rate</string>
    <string name="checkConnection">Please check your connection and try again.</string>
</resources>