<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_title"
            android:text="@string/userPreferences"
            android:gravity="center"
            android:textColor = "?android:textColorPrimary"
            />
        <TextView
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setPlayRoutineMode"
            android:textSize="@dimen/text_subtitle"
            android:textColor = "?android:textColorPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor = "?android:textColorPrimary"
                android:text="@string/detailViewDescrip"
                android:layout_marginHorizontal="20dp"
                android:textSize="@dimen/text_body"/>
            <Button
                android:id="@+id/detailViewBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_btn"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:backgroundTint="@color/purple_700"
                android:text="@string/notActive" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor = "?android:textColorPrimary"
                android:text="@string/multipleExercisesViewDescrip"
                android:layout_marginHorizontal="20dp"
                android:textSize="@dimen/text_body"/>
            <Button
                android:id="@+id/multipleExercisesViewBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_btn"
                android:layout_marginTop="15dp"
                android:layout_gravity="end"
                android:backgroundTint="@color/purple_500"
                android:text="@string/active"
                />
        </LinearLayout>

        <TextView
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setDefaultSection"
            android:textSize="@dimen/text_subtitle"
            android:textColor = "?android:textColorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/myRoutinesBtn"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_btn"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/title_myroutines"
                    />
                <Button
                    android:id="@+id/exploreBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="@dimen/text_btn"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/title_explore"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/favsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_btn"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/purple_700"
                    android:layout_marginHorizontal="20dp"
                    android:text="@string/title_favs"
                    />
                <Button
                    android:id="@+id/profileBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_btn"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/purple_700"
                    android:text="@string/title_profile"
                    />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>